--- a/index.html
+++ b/index.html
@@ -195,6 +195,38 @@
       </div>
     </section>
 
+    <!-- PORTFOLIO -->
+    <section id="portfolio" class="portfolio">
+      <div class="container">
+        <h2 class="section-title fade-in">Наші проєкти</h2>
+        <p class="section-subtitle fade-in">Подивіться, що ми вже зробили</p>
+        <div class="portfolio__grid">
+          <div class="portfolio__item fade-in">
+            <img src="images/project1.jpg" alt="Project 1" />
+            <div class="portfolio__overlay">
+              <h3>Web App</h3>
+              <p>Дизайн та розробка</p>
+            </div>
+          </div>
+          <div class="portfolio__item fade-in">
+            <img src="images/project2.jpg" alt="Project 2" />
+            <div class="portfolio__overlay">
+              <h3>Landing Page</h3>
+              <p>UI/UX</p>
+            </div>
+          </div>
+          <div class="portfolio__item fade-in">
+            <img src="images/project3.jpg" alt="Project 3" />
+            <div class="portfolio__overlay">
+              <h3>E-commerce</h3>
+              <p>Full Stack</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- INNOVATIONS -->
     <section id="innovations" class="innovation">
       <div class="container innovation__container">
         <!-- Left Content -->
