added testimonials slider

--- a/index.html
+++ b/index.html
@@ -285,6 +285,75 @@
       </div>
     </section>
 
+    <!-- TESTIMONIALS -->
+    <section id="testimonials" class="testimonials">
+      <div class="container">
+        <h2 class="section-title fade-in">Відгуки клієнтів</h2>
+        <div class="testimonials__slider-wrapper">
+          <button class="slider-btn prev">
+            <i class="fa-solid fa-chevron-left"></i>
+          </button>
+
+          <div class="testimonials__slider">
+            <div class="testimonial">
+              <img src="images/client1.jpg" alt="Client 1" />
+              <h3>Ірина К.</h3>
+              <p class="role">CEO, TechCorp</p>
+              <p class="text">
+                "Це була найкраща співпраця! Сайт вийшов ідеальним!"
+              </p>
+              <div class="stars">⭐⭐⭐⭐⭐</div>
+            </div>
+            <div class="testimonial">
+              <img src="images/client2.jpg" alt="Client 2" />
+              <h3>Олександр П.</h3>
+              <p class="role">Маркетолог</p>
+              <p class="text">"Вони перевершили всі наші очікування!"</p>
+              <div class="stars">⭐⭐⭐⭐⭐</div>
+            </div>
+            <div class="testimonial">
+              <img src="images/client3.jpg" alt="Client 3" />
+              <h3>Марія С.</h3>
+              <p class="role">Startup Founder</p>
+              <p class="text">"Команда зробила все швидко і якісно!"</p>
+              <div class="stars">⭐⭐⭐⭐⭐</div>
+            </div>
+            <div class="testimonial">
+              <img src="images/client1.jpg" alt="Client 1" />
+              <h3>Ірина К.</h3>
+              <p class="role">CEO, TechCorp</p>
+              <p class="text">
+                "Це була найкраща співпраця! Сайт вийшов ідеальним!"
+              </p>
+              <div class="stars">⭐⭐⭐⭐⭐</div>
+            </div>
+            <div class="testimonial">
+              <img src="images/client2.jpg" alt="Client 2" />
+              <h3>Олександр П.</h3>
+              <p class="role">Маркетолог</p>
+              <p class="text">"Вони перевершили всі наші очікування!"</p>
+              <div class="stars">⭐⭐⭐⭐⭐</div>
+            </div>
+            <div class="testimonial">
+              <img src="images/client3.jpg" alt="Client 3" />
+              <h3>Марія С.</h3>
+              <p class="role">Startup Founder</p>
+              <p class="text">"Команда зробила все швидко і якісно!"</p>
+              <div class="stars">⭐⭐⭐⭐⭐</div>
+            </div>
+          </div>
+
+          <button class="slider-btn next">
+            <i class="fa-solid fa-chevron-right"></i>
+          </button>
+        </div>
+
+        <!-- Bullets -->
+        <div class="slider-dots"></div>
+      </div>
+    </section>
+
+    <!-- CONTACT -->
     <section id="contact" class="cta-contact">
       <div class="container">
         <!-- CTA -->
@@ -313,6 +382,7 @@
       </div>
     </section>
 
+    <!-- FOOTER -->
     <footer class="footer">
       <div class="container footer__container">
         <!-- Logo & About -->
@@ -379,6 +449,7 @@
       </div>
     </footer>
 
+    <!-- Scroll to top button -->
     <button id="scroll-up" class="scroll-up" aria-label="Scroll to top">
       <i class="fas fa-arrow-up"></i>
     </button>
