--- a/index.html
+++ b/index.html
@@ -271,15 +271,19 @@
 
         <!-- Right Stats Card -->
         <div class="innovation__stats fade-in">
-          <div class="stats-card">
-            <span class="stats-card__icon">🏆</span>
-            <h3 class="stats-card__title">№1 В УКРАЇНІ</h3>
-            <ul class="stats-list">
-              <li><strong>1000+</strong> Проектів</li>
-              <li><strong>99.9%</strong> Успіх</li>
-              <li><strong>24/7</strong> Підтримка</li>
-              <li><strong>∞</strong> Можливості</li>
-            </ul>
+          <div class="innovations">
+            <div class="scene">
+              <div class="glass-panel"></div>
+              <img
+                src="images/innovations/lightbulb.png"
+                alt="Ілюстрація фіолетової лампочки"
+                class="lamp-image"
+              />
+              <div class="sphere sphere1"></div>
+              <div class="sphere sphere2"></div>
+              <div class="sphere sphere3"></div>
+              <div class="torus"></div>
+            </div>
           </div>
         </div>
       </div>
