--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="container header__container">
         <!-- Logo -->
         <div class="header__logo">
-          <a href="#hero"><i class="fas fa-bolt"></i> MyBrand</a>
+          <a href="#hero"><i class="fas fa-bolt"></i>&nbsp;MyBrand</a>
         </div>
 
         <!-- Navigation -->
@@ -392,7 +392,7 @@
         <!-- Logo & About -->
         <div class="footer__col footer__about fade-in">
           <h3 class="footer__logo">
-            <a href="#hero"><i class="fas fa-bolt"></i> MyBrand</a>
+            <a href="#hero"><i class="fas fa-bolt"></i>&nbsp;MyBrand</a>
           </h3>
           <p>Creating the future with you. Every day. Every project.</p>
         </div>
